# eae-dsaa-2023

./: .gitignore  .pre-commit-config.yaml  2024_nlp_prompt_engineering_intro.ipynb  2024_nlp_retrieval_augmented_generation.ipynb  2024_nlp_tasks_with_gpt.ipynb  3 - SVM using Python.ipynb  README.md  decision_tree.ipynb  environment.ipynb  nlp_prompt_engineering_intro.ipynb  nlp_prompting.ipynb  nlp_rag.ipynb  nlp_retrieval_augmented_generation.ipynb  nlp_svm.ipynb  nlp_tasks_with_gpt.ipynb  open_ai_test.ipynb  pyproject.toml  regression.ipynb  reviews.tsv  ruff.toml  svm.ipynb  unsupervised.ipynb
