[project]
name = "eae-dsaa-2025"
version = "0.1.0"
description = "This repository contains several labs for the Data Science Course at EAE Business School. The labs are designed to help students understand and apply various data science techniques and tools."
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = ["ipykernel>=6.29.5", "pip>=25.0.1"]

[project.optional-dependencies]
lab-1 = [
  "islp==0.4.0",
  "numpy==2.2.4",
  "pandas==2.2.3",
  "scikit-learn==1.6.1",
  "seaborn==0.13.2",
]
lab-2 = [
  "dtreeviz==2.2.2",
  "ipython==8.35.0",
  "nbformat==5.10.4",
  "numpy==2.2.4",
  "pathlib==1.0.1",
  "plotly==6.0.1",
  "pydotplus==2.0.2",
  "scikit-learn==1.6.1",
  "seaborn==0.13.2",
]
lab-3 = [
  "numpy==2.2.4",
  "nbformat==5.10.4",
  "pandas==2.2.3",
  "plotly==6.0.1",
  "scikit-learn==1.6.1",
]
lab-4 = ["ipython==8.35.0", "openai==1.75.0", "python-dotenv==1.1.0"]
lab-5 = [
  "ipython==8.35.0",
  "openai==1.75.0",
  "python-dotenv==1.1.0",
  "spacy==3.8.5",
]
lab-6 = [
  "chromadb==1.0.5",
  "ipython==8.35.0",
  "numpy==2.2.4",
  "langchain==0.3.23",
  "langchain-community==0.3.21",
  "langchain-openai==0.3.14",
  "openai==1.75.0",
  "pypdf==5.4.0",
  "python-dotenv==1.1.0",
  "requests==2.32.3",
  "tiktoken==0.9.0",
]
